# Multiagents

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py
backend/DSPy Agent/: __init__.py  agent.py  config.py
backend/DSPy Agent/tools/: __init__.py  dspy_wiki_rag.py
backend/FPL_Agent/: fpl_data_client.py  graph.py  schema.py  smoke_test.py
backend/FPL_Agent/optimizer_mcp/dspy_modules/: squad_selector.py  squad_validator.py
backend/agent/: __init__.py  llm.py  tools.py
email_codes_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
